Work still in progress

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/main.css">
-    <title>HNG | Home</title>
-     <!-- FONT AWESOME CDN LINK -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/main.css">
+  <title>HNG | Home</title>
+  <!-- FONT AWESOME CDN LINK -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -17,14 +18,76 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body>
-    <div class="content-with-header"></div>
-    <div class="section-one-welcome-to-hotel-ng"></div>
-    <div class="section-content-for-room-and-suites"></div>
-    <div class="section-for-suscribe-to-our-newsletter"></div>
-    <div class="footer"></div>
 
-    <!-- Javascript here -->
-    <script src="./assets/js/script.js"></script>
+<body>
+  <div class="header-and-showcase-container">
+ 
+      <header id="header">
+         <nav class="inline-container">
+            <!-- Logo -->
+         <ul class="logo">
+          <li>
+            <a id="header-img-link" href="#"> HNG</a>
+          </li>
+         </ul>
+  
+          <ul id="navbar">
+              <li><a class="nav-link" href="">HOME</a></li>
+              <li><a class="nav-link" href="">ABOUT</a></li>
+              <li><a class="nav-link" href="">ROOMS</a></li>
+              <li><a class="nav-link" href="">FACILITIES</a></li>
+              <li><a class="nav-link" href="">CONTACT US</a></li>
+          </ul>
+        </nav>
+      </header>
+  
+    <div class="showcase-section">
+      <h1>Best Place to Stay</h1>
+      <p class="showcase-section-p">We offer high-quality accommodation with a wide
+        variety of rooms, additional services, and
+        amenities available to all our guests.</p>
+      <span><a class="book-now">Book Now</a></span>
+    </div>
+  </div>
+
+
+  <div class="section-one-welcome-to-hotel-ng">
+    <div class="images-in-a-row-container">
+          <div class="image-gallery">
+            <div class="image">
+              <p>Dinning Hall</p>
+            </div>
+            <div class="image">
+              <p>Swimming Pool</p>
+            </div>
+            <div class="image">
+              <p>Special Room</p>
+            </div>
+        </div>
+      </div>
+
+      <div class="welcome-to-hng-container">
+        <div class="child-text-content">
+            <div >
+              <h2>WELCOME TO</h2>
+              <h3>HNG HOTEL</h3>
+            </div>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+             <a href="#" class="button-learn-more">LEARN MORE</a>
+        </div>
+  
+        <div class="welcome-img-section-container">
+          <img class="resort-img" src="./img/cottages-in-the-middle-of-beach-753626.jpg" alt="Special_Rooms_image" alt="resort_img">
+        </div>
+      </div>
+    
+  </div>
+  <div class="section-content-for-room-and-suites"></div>
+  <div class="section-for-suscribe-to-our-newsletter"></div>
+  <div class="footer"></div>
+
+  <!-- Javascript here -->
+  <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
